[newsletter-sign-up-form-with-success-message] Fix z-index

--- a/newbie/newsletter-sign-up-form-with-success-message/index.css
+++ b/newbie/newsletter-sign-up-form-with-success-message/index.css
@@ -39,6 +39,7 @@ main {
   justify-content: center;
   align-items: center;
   flex: 1;
+  z-index: 1;
 }
 
 .card {
